@@ -7,6 +7,7 @@
 ADD: About dialog/tab (JSE6 only)
 ADD: center connect dialog on top of main frame/window
 FIX: unchecked confirmTabClose in properties (JSE6 only)
+FIX: bug id:3161636 (System Name not in window title bar anymore)
 FIX: bug id:3160345 (Default value of column separator looks strange)
 FIX: bug id:3158911 (command line switch -s not working any more)
 FIX: bug id:3158902 (settings folder in user's home directory is not created)
